welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var lettre:String
    ^BDRBuggle:2: error: local variables must be initialized
var lettre:String
    ^BDRBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if (lettre = "R"){
                   ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (lettre ="L"){
                    ^BDRBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (lettre ="I"){
                    ^BDRBuggle:17: error: not found: value avancer
    avancer();
    ^BDRBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (lettre ="A"){
                    ^BDRBuggle:22: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (lettre ="B"){
                    ^BDRBuggle:26: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (lettre ="C"){
                    ^BDRBuggle:31: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (lettre ="Z"){
                    ^BDRBuggle:34: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (lettre ="Y"){
                    ^BDRBuggle:38: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (lettre ="X"){
                    ^